Add  placeholder of transparent login form

--- a/1_Trasparent_Login_Form/index.html
+++ b/1_Trasparent_Login_Form/index.html
@@ -26,6 +26,7 @@
               class="email__input field__input btn"
               id="email"
             />
+            <p class="placeholder">Your email...</p>
           </div>
           <div class="password field">
             <label for="password" class="password__label field__label">
@@ -37,7 +38,8 @@
               id="password"
               class="password__input field__input btn"
             />
-            <i class="fa-solid fa-eye show"></i>
+            <p class="placeholder">Your password...</p>
+            <i class="fa-solid fa-eye hidden eye"></i>
           </div>
           <a href="#" class="forget-password">Forget Password</a>
           <button class="btn form__btn" type="submit">Login</button>
